--- a/authors.html
+++ b/authors.html
@@ -71,7 +71,7 @@
       </button>
       <span class="navbar-brand">
         <a class="navbar-link" href="index.html">enhancerHomologSearch</a>
-        <span class="version label label-default" data-toggle="tooltip" data-placement="bottom" title="Released version">0.1.0</span>
+        <span class="version label label-default" data-toggle="tooltip" data-placement="bottom" title="Released version">0.99.0</span>
       </span>
     </div>
 
@@ -110,7 +110,15 @@
 
     <ul class="list-unstyled">
       <li>
-        <p><strong>Jianhong Ou</strong>. Maintainer. 
+        <p><strong>Jianhong Ou</strong>. Author, maintainer. <a href='https://orcid.org/0000-0002-8652-2488' target='orcid.widget' aria-label='ORCID'><span class='fab fa-orcid orcid' aria-hidden='true'></span></a>
+        </p>
+      </li>
+      <li>
+        <p><strong>Valentina Cigliola</strong>. Data contributor. 
+        </p>
+      </li>
+      <li>
+        <p><strong>Kenneth Poss</strong>. Funder. 
         </p>
       </li>
     </ul>
@@ -123,7 +131,7 @@
 
       <footer>
       <div class="copyright">
-  <p>Developed by Jianhong Ou.</p>
+  <p>Developed by Jianhong Ou, Kenneth Poss.</p>
 </div>
 
 <div class="pkgdown">
