--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </button>
       <span class="navbar-brand">
         <a class="navbar-link" href="index.html">enhancerHomologSearch</a>
-        <span class="version label label-default" data-toggle="tooltip" data-placement="bottom" title="Released version">0.1.0</span>
+        <span class="version label label-default" data-toggle="tooltip" data-placement="bottom" title="Released version">0.99.0</span>
       </span>
     </div>
 
@@ -100,7 +100,9 @@
 <div class="developers">
 <h2>Developers</h2>
 <ul class="list-unstyled">
-<li>Jianhong Ou <br><small class="roles"> Maintainer </small>  </li>
+<li>Jianhong Ou <br><small class="roles"> Author, maintainer </small> <a href="https://orcid.org/0000-0002-8652-2488" target="orcid.widget" aria-label="ORCID"><span class="fab fa-orcid orcid" aria-hidden="true"></span></a> </li>
+<li>Kenneth Poss <br><small class="roles"> Funder </small>  </li>
+<li><a href="authors.html">All authors...</a></li>
 </ul>
 </div>
 
@@ -109,7 +111,7 @@
 
 
       <footer><div class="copyright">
-  <p>Developed by Jianhong Ou.</p>
+  <p>Developed by Jianhong Ou, Kenneth Poss.</p>
 </div>
 
 <div class="pkgdown">
